# terraform-provider-signoz

./: .gitignore  .golangci.yml  LICENSE  Makefile  README.md  config.yml  generate.go  go.mod  go.sum  main.go  skaff.yml
tests/: .gitignore  README.md  casting.yaml  conftest.py  pyproject.toml
tests/fixtures/: channels.py  foundry.py  logger.py  reuse.py  signoz.py  terraform.py
tests/integration/: test_examples.py
tests/integration/bootstrap/: setup.py
tests/integration/tests/: test_alert_rule_id_stability.py  test_editing.py  test_examples.py  test_testdata.py
tests/testdata/: README.md
tests/testdata/resources/signoz_dashboard/00/: 01-cicd.tf.json  02-jsonpatch.json  03-jsonpatch.json
tests/testdata/resources/signoz_dashboard/01/: 01-istio.tf.json
tests/testdata/resources/signoz_dashboard/02/: 01-claude_code.tf.json
tests/testdata/resources/signoz_dashboard/03/: 01-nginx_ingress.tf.json
tests/testdata/resources/signoz_dashboard/04/: 01-fluxcd.tf.json
tests/testdata/resources/signoz_dashboard/05/: 01-step_interval.tf.json  02-jsonpatch.json
tests/testdata/resources/signoz_dashboard/06/: 01-zero_values.tf  01-zero_values.tf.json
tests/testdata/resources/signoz_dashboard/07/: 01-minimal.tf
tests/testdata/resources/signoz_dashboard/08/: 01-null_and_zero_fields.tf.json
tests/testdata/resources/signoz_dashboard/09/: 01-omitempty_fields.tf  (+1 more)
tests/testdata/resources/signoz_rule/: anomaly_seasonality.tf  builder_formula.tf  clickhouse_query.tf  cumulative_evaluation.tf  logs_count.tf  metrics_multi_threshold.tf  promql_full.tf  traces_latency.tf
(+889 files in other folders)
